converted styles to tailwindcss

--- a/index.html
+++ b/index.html
@@ -2,12 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TODO List Exercise</title>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/Vue.Draggable/4.0.0/vuedraggable.umd.min.js"></script>
   </head>
-  <body>
+  <body class="bg-pinya">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
